# hoice-pcsp

./: LICENSE  README.md  cabal.project  flake.nix  hie.yaml  hoice-pcsp.cabal
test/: Spec.hs
