cabal-version:   2.4
name:            hoice-pcsp
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Liu Yuxi
maintainer:      Liu Yuxi <ubikium@gmail.com>
copyright:       2022 Liu Yuxi
extra-doc-files:
  CHANGELOG.md
  README.md
description:     A Horn Clause solver which allows disjunction in heads.
synopsis:        A Horn Clause solver which allows disjunction in heads.
homepage:        https://github.com/crvdgc/hoice-pcsp#readme

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options: -Wall 

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable hoice-pcsp
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  hoice-pcsp
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite hoice-pcsp-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , hoice-pcsp

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark hoice-pcsp-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , hoice-pcsp

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
